updated bib file for kirby-1 and some minor spelling CSF chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -38,7 +38,7 @@
 
 @book{SzaboBabuska1991,
  title={Finite Element Analysis},
- author={Szab{\'o}, B. and Szab{\'o}, B.A. and Babus̆ka, I.},
+ author={Szab{\'o}, B. and Szab{\'o}, B.A. and Babu\v{s}ka, I.},
  year={1991},
  publisher={Wiley-Interscience}
 }
@@ -122,7 +122,10 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
  title={Fast simplicial finite element algorithms using {B}ernstein polynomials},
  author={Kirby, R. C.},
  journal={Numerische Mathematik},
- note={To appear}
+ volume ={117}, 
+ number={4}, 
+ pages={631--652},
+ year = {2011}
 }
 
 @ARTICLE{JagerSteinmannKuhl2008,
@@ -4492,7 +4495,7 @@ year = "2006"
 }
 
 @BOOK{KarniadakisSherwin2005,
-  title = {Spectral/\emph{hp} Element Methods for Computational Fluid Dynamics},
+  title = {Spectral/hp Element Methods for Computational Fluid Dynamics},
   publisher = {Oxford University Press},
   year = {2005},
   author = {G. E. Karniadakis and S. J. Sherwin},
@@ -4584,6 +4587,8 @@ year = "2006"
   author = {R. C. Kirby},
   title = {From Functional Analysis to Iterative Methods},
   journal = {SIAM Review},
+  volume={52}, 
+  pages={269--293}, 
   year = {2010},
 }
 
@@ -7107,7 +7112,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 
 @ARTICLE{RannacherTurek1992,
   author = {R. Rannacher and S. Turek},
-  title = {A simple nonconforming quadrilateral Stokes element},
+  title = {A simple nonconforming quadrilateral {S}tokes element},
   journal = {Numer. Meth. Parth. Diff. Equ.},
   year = {1992},
   volume = {8},
