--- a/TODO
+++ b/TODO
@@ -9,7 +9,9 @@ Things to check
 * Use of i for local indices and I for global indices
 * Check use of \stackrel{+}{=}
 * Check use of : or , before formula
-* Make sure that all references are available
+* Make sure that all references are available (insist on archival web link
+  for documents that are not readily available, e.g. theses, reports)
+* Add http://dx.doi.org/xxxxx link for all papers in reference list
 * Add some space around definition environment
 * Make footnotes full page
 * Full names in author list
