Updated Unicorn chapter with installation/test instructions.
Added affiliations for Unicorn authors.

--- a/unfinished/hoffman-2/chapter.tex
+++ b/unfinished/hoffman-2/chapter.tex
@@ -50,9 +50,10 @@ adaptive fixed-point iteration for solving discrete systems, mesh
 adaptivity by local cell operations (split, collapse, swap) (through
 MAdLib) and cell quality optimization (smoothing).
 
-A live CD with snapshots of Unicorn corresponding to the Unicorn
-chapters in this book is available
-at: \url{ftp://ftp.nada.kth.se/local/jjan/unicorn_fenics-book.iso}.
+% Comment out until persistent URL can be found
+%A live CD with snapshots of Unicorn corresponding to the Unicorn
+%chapters in this book is available
+%at: \url{ftp://ftp.nada.kth.se/local/jjan/unicorn_fenics-book.iso}.
 
 \begin{figure}[!h]
 \center{
@@ -1651,6 +1652,17 @@ int main()
 \end{c++}
 \caption{Part 4 of FSI use case: main program, passing data to solver.}
 \end{figure}
+
+\subsection{Unicorn-HPC installation and basic test}
+
+Unicorn-HPC is the high-performance computing branch of Unicorn,
+showing strong linear scaling on massively parallel hardware as
+described above.
+
+To verify the correct installation and functionality of Unicorn-HPC,
+follow the steps in the README file in the Unicorn-HPC distribution,
+under ``Testing''. The test represents the turbulent flow past a cube
+simulation described in chapter \ref{chap:hoffman-1}.
 
 \section{Acknowledgement}
 
