Add missing references.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,14 +1,40 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
-@article{ErnGuermond2004,
+@book{Bickford1994,
+  title={A First Course in the Finite Element Method},
+  author={Bickford, W. B.},
+  year={1994},
+  publisher={Irwin}
+}
+@book{Kiusalaas2010,
+  title     = {Numerical Methods in Engineering with Python},
+  author    = {J. Kiusalaas},
+  year      = {2009},
+  publisher = {Cambridge University Press},
+  edition   = {second}
+}
+
+@book{QuarteroniValli2008,
+  title     = {Numerical Approximation of Partial Differential Equations},
+  author    = {Quarteroni, A. and Valli, A.},
+  volume    = {23},
+  series    = {Springer Series in Computational Mathematics},
+  year      = {2008},
+  publisher = {Springer Verlag},
+  url = {http://dx.doi.org/10.1007/978-3-540-85268-1}
+}
+
+@book{ErnGuermond2004,
   title={Theory and Practice of Finite Elements},
   author={A. Ern and J.-L. Guermond},
   year={2004},
+  series = {Applied Mathematical Sciences},
+  volume = {159},
   publisher={Springer-Verlag},
 }
 
-@article{Gockenbach2006,
+@book{Gockenbach2006,
   title={Understanding and Implementing the Finite Element Method},
   author={M. S. Gockenbach},
   year={2006},
@@ -31,7 +57,7 @@
   TITLE = {Spectral methods on triangles and other domains},
   JOURNAL = {Journal of Scientific Computing},
   VOLUME = {6},
-   YEAR = {1991},
+  YEAR = {1991},
   NUMBER = {4},
   PAGES = {345--390},
 }
@@ -88,6 +114,7 @@
  number={14},
  pages={2103--2130},
  year={2003},
+ url = {http://dx.doi.org/10.1002/nme.847}
 }
 
 @article{Dunavant1985,
@@ -122,8 +149,8 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
  title={Fast simplicial finite element algorithms using {B}ernstein polynomials},
  author={Kirby, R. C.},
  journal={Numerische Mathematik},
- volume ={117}, 
- number={4}, 
+ volume ={117},
+ number={4},
  pages={631--652},
  year = {2011}
 }
@@ -310,8 +337,7 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   year = {1997},
   volume = {142},
   pages = {1--88},
-  owner = {logg},
-  timestamp = {2009.06.06}
+  url = {http://dx.doi.org/10.1016/S0045-7825(96)01107-3}
 }
 
 @ARTICLE{AinsworthOden1993,
@@ -323,7 +349,7 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   volume = {65},
   pages = {23--50},
   number = {1},
-  publisher = {Springer},
+  url = {http://dx.doi.org/10.1007/BF01385738},
 }
 
 @ARTICLE{AlastrueyParkerPeiroEtAl2007,
@@ -4587,8 +4613,8 @@ year = "2006"
   author = {R. C. Kirby},
   title = {From Functional Analysis to Iterative Methods},
   journal = {SIAM Review},
-  volume={52}, 
-  pages={269--293}, 
+  volume={52},
+  pages={269--293},
   year = {2010},
 }
 
