--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4896,8 +4896,8 @@ year = "2006"
 
 @ARTICLE{Landweber1951,
   author = {L. Landweber},
-  title = {An iteration formula for Fredholm integral equations of the first
-	kind},
+  title = {An iteration formula for {F}redholm integral equations of
+  the first kind},
   journal = {Amer. J. Math.},
   year = {1951},
   volume = {73},
@@ -4963,40 +4963,26 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   author = {Hans Petter Langtangen}
 }
 
-@BOOK{Langtangen2009,
-  title = {Python Scripting for Computational Science},
-  publisher = {Springer},
-  year = {2009},
-  author = {H. P. Langtangen},
-  edition = {third},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@BOOK{Langtangen2009a,
-  title = {A Primer on Scientific Programming with Python},
-  publisher = {Springer},
-  year = {2009},
-  author = {H. P. Langtangen},
-  series = {Texts in Computational Science and Engineering},
-  volume = {6}
-}
-
 @BOOK{Langtangen2008,
   title = {Python Scripting for Computational Science},
   publisher = {Springer},
   year = {2008},
-  author = {Langtangen, Hans Petter},
-  address = {Heidelberg},
+  author = {H. P. Langtangen},
   edition = {third},
+  series = {Texts in Computational Science and Engineering},
+  volume = {3},
+  url = {http://dx.doi.org/10.1007/978-3-540-73916-6}
 }
 
-@BOOK{Langtangen2006,
-  title = {Python Scripting for Computational Science},
+@BOOK{Langtangen20011,
+  title = {A Primer on Scientific Programming with Python},
   publisher = {Springer},
-  year = {2006},
+  year = {2011},
   author = {H. P. Langtangen},
+  series = {Texts in Computational Science and Engineering},
   edition = {second},
+  volume = {6},
+  url    = {http://dx.doi.org/10.1007/978-3-642-18366-9}
 }
 
 @BOOK{Langtangen2003,
@@ -5073,7 +5059,7 @@ author = {Hans Petter Langtangen and Geir Pedersen}
 
 @INCOLLECTION{Langtangen2003b,
   pages = {321-360},
-  title = {Using Diffpack from Python Scripts},
+  title = {Using {D}iffpack from {P}ython Scripts},
   publisher = {Springer-Verlag},
   year = {2003},
   editor = {Langtangen, H.P. and Tveito, A.},
@@ -9150,8 +9136,9 @@ pages={36-40}
 	title = {Discontinuous Finite Elements in Fluid Dynamics and Heat Transfer},
 	series = {Computational Fluid and Solid Mechanics},
 	author = {B. Q. Lin},
-	publisher = {Springer-Verlag London Limited},
-	year = {2006}
+	publisher = {Springer-Verlag},
+	year = {2006},
+  url = {http://dx.doi.org/10.1007/1-84628-205-5}
 }
 
 
