--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5793,15 +5793,13 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   publisher = {Springer}
 }
 
-@ARTICLE{Lopes2007,
+@phdthesis{Lopes2007,
   author = {N. Lopes},
-  title = {Ph{D} report: {R}elat\'{o}rio do Curso de Forma\c{c}\~{a}o avan\c{c}ada:
+  title = {{R}elat\'{o}rio do Curso de Forma\c{c}\~{a}o avan\c{c}ada:
 	Alguns Modelos de Propaga\c{c}\~{a}o de Ondas Mar\'{i}timas},
-  journal = {Departamento de Matem\'{a}tica, Faculdade de Ci\^{e}ncias da Universidade
-	de Lisboa},
+  school = {Departamento de Matem\'{a}tica, Faculdade de Ci\^{e}ncias
+  da Universidade de Lisboa},
   year = {2007},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @ARTICLE{LopesPereiraTrabucho,
