Add affiliation for Kristian Oelgaard

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -196,4 +196,12 @@
 
 \fenicsauthor{Ilmar M. Wilbers}{}{}{}{}
 
-\fenicsauthor{Kristian B. \O{}lgaard}{}{}{}{}
+\fenicsauthor{Kristian B. \O{}lgaard}
+             {k.b.oelgaard@gmail.com}
+             {Faculty of Civil Engineering and Geosciences,
+              Delft University of Technology, The Netherlands}
+             {This work is supported by the Netherlands Technology Foundation
+              STW, the Netherlands Organisation for Scientific Research and the
+              Ministry of Public Works and Water Management.}
+             {Chapters \ref{chap:oelgaard-2}, \ref{chap:oelgaard-1} and
+              \ref{chap:logg-1}}
