Some formatting fixes in authors.tex

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -16,19 +16,42 @@
               Computing, South Africa as part of a flagship project.}
              {Chapter \ref{chap:lezar}}
 
-\fenicsauthor{Rodrigo Vilela De Abreu}{rvda@csc.kth.se}{School of Computer Science and Communication, KTH, Sweden}{}{Chapter \ref{chap:hoffman-1}}
+\fenicsauthor{Rodrigo Vilela De Abreu}{rvda@csc.kth.se}
+             {School of Computer Science and Communication, KTH, Sweden}
+             {}
+             {Chapter \ref{chap:hoffman-1}}
 
-\fenicsauthor{Cem Degirmenci}{ncde@csc.kth.se}{School of Computer Science and Communication, KTH, Sweden}{}{Chapter \ref{chap:hoffman-2}}
+\fenicsauthor{Cem Degirmenci}
+             {ncde@csc.kth.se}
+             {School of Computer Science and Communication, KTH, Sweden}
+             {}
+             {Chapter \ref{chap:hoffman-2}}
 
 \fenicsauthor{Johan Hake}{}{}{}{}
 
-\fenicsauthor{Johan Hoffman}{jhoffman@csc.kth.se}{School of Computer Science and Communication, KTH, Sweden}{}{Chapters \ref{chap:hoffman-1} \ref{chap:hoffman-2}}
+\fenicsauthor{Johan Hoffman}
+             {jhoffman@csc.kth.se}
+             {School of Computer Science and Communication, KTH, Sweden}
+             {}
+             {Chapters \ref{chap:hoffman-1} \ref{chap:hoffman-2}}
 
-\fenicsauthor{Johan Jansson}{jjan@csc.kth.se}{School of Computer Science and Communication, KTH, Sweden}{}{Chapters \ref{chap:hoffman-1} \ref{chap:hoffman-2}}
+\fenicsauthor{Johan Jansson}
+             {jjan@csc.kth.se}
+             {School of Computer Science and Communication, KTH, Sweden}
+             {}
+             {Chapters \ref{chap:hoffman-1} \ref{chap:hoffman-2}}
 
-\fenicsauthor{Niclas Jansson}{njansson@csc.kth.se}{School of Computer Science and Communication, KTH, Sweden}{}{Chapters \ref{chap:hoffman-1} \ref{chap:hoffman-2}}
+\fenicsauthor{Niclas Jansson}
+             {njansson@csc.kth.se}
+             {School of Computer Science and Communication, KTH, Sweden}
+             {}
+             {Chapters \ref{chap:hoffman-1} \ref{chap:hoffman-2}}
 
-\fenicsauthor{Claes Johnson}{cgjoh@csc.kth.se}{School of Computer Science and Communication, KTH, Sweden}{}{Chapter \ref{chap:hoffman-1}}
+\fenicsauthor{Claes Johnson}
+             {cgjoh@csc.kth.se}
+             {School of Computer Science and Communication, KTH, Sweden}
+             {}
+             {Chapter \ref{chap:hoffman-1}}
 
 \fenicsauthor{Robert C. Kirby}{}{}{}{}
 
@@ -109,7 +132,11 @@
               Laboratory.}
              {Chapters \ref{chap:narayanan} and \ref{chap:kvs-1}}
 
-\fenicsauthor{Murtazo Nazarov}{murtazo@csc.kth.se}{School of Computer Science and Communication, KTH, Sweden}{}{Chapter \ref{chap:hoffman-2}}
+\fenicsauthor{Murtazo Nazarov}
+             {murtazo@csc.kth.se}
+             {School of Computer Science and Communication, KTH, Sweden}
+             {}
+             {Chapter \ref{chap:hoffman-2}}
 
 \fenicsauthor{Mehdi Nikbakht}
              {m.nikbakht@tudelft.nl}
