Add affiliation from Hake

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -27,7 +27,19 @@
              {}
              {Chapter \ref{chap:hoffman-2}}
 
-\fenicsauthor{Johan Hake}{}{}{}{}
+\fenicsauthor{Johan Hake}
+             {hake.dev@gmail.com}
+             {Department of Bioengeneering, UCSD, USA\\
+              Center for Biomedical Computing at Simula Research
+              Laboratory, Norway}
+             {This work was supported by the National Biomedical
+              Computational Resource (NIH grant 5P41RR08605-17).
+              This work is also supported by a Center of
+              Excellence grant from the Research Council of Norway to
+              the Center for Biomedical Computing at Simula Research
+              Laboratory.}
+             {Chapters
+              \ref{chap:logg-2}, \ref{chap:mardal-2}, \ref{chap:hake}}
 
 \fenicsauthor{Johan Hoffman}
              {jhoffman@csc.kth.se}
