--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -191,7 +191,13 @@
 
 \fenicsauthor{Hans Joachim Schroll}{}{}{}{}
 
-\fenicsauthor{L. Ridgway Scott}{}{}{}{}
+\fenicsauthor{L. Ridgway Scott}
+             {ridg@uchicago.edu}
+             {Departments of Computer Science and Mathematics,
+              Institute for Biophysical Dynamics and the Computation Institute,
+              University of Chicago}
+             {This work was supported in part by NSF grant DMS-0920960.}
+             {Chapter \ref{chap:stokescott}}
 
 \fenicsauthor{Kristoffer Selim}
              {selim@simula.no}
