Minor fix in authors.tex

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -197,7 +197,7 @@
               Institute for Biophysical Dynamics and the Computation Institute,
               University of Chicago}
              {This work was supported in part by NSF grant DMS-0920960.}
-             {Chapter \ref{chap:stokescott}}
+             {Chapter \ref{chap:terrel}}
 
 \fenicsauthor{Kristoffer Selim}
              {selim@simula.no}
