Add affiliation for Andy

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -212,7 +212,11 @@
 
 \fenicsauthor{Susanne St\o{}le-Hentschel}{}{}{}{}
 
-\fenicsauthor{Andy R. Terrel}{}{}{}{}
+\fenicsauthor{Andy R. Terrel}
+             {andy.terrel@gmail.com}
+             {Enthought Inc., Austin, Texas, USA}
+             {}
+             {Chapters \ref{chap:terrel}, \ref{chap:kirby-4} and \ref{chap:kirby-6}}
 
 \fenicsauthor{Lu{\'\i}s Trabucho}
              {trabucho@ptmat.fc.ul.pt}
