Addressing editor notes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1126,6 +1126,17 @@ pages = {691}
   author = {J. Bergh and J. L\"{o}fstr\"{o}m}
 }
 
+@ARTICLE{BernsteinMalkusOlsen1985,
+  author = {B. Bernstein and D. Malkus and E.T. Olsen},
+  title = {A finite element for incompressible plane flows of fluids with memory},
+  journal = {International Journal for Numerical Methods in Fluids },
+  year = {1985},
+  month = {January},
+  volume = {5},
+  issue = {1},
+  pages = {43 -- 70}
+}
+
 @BOOK{Bers2001,
   title = {Excitation-Contraction Coupling and Cardiac Contractile Force},
   publisher = {Kluwer Academic Publishers},
@@ -6387,6 +6398,17 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   url = {http://dx.doi.org/10.1016/S0140-6736(96)07492-2},
 }
 
+@ARTICLE{NagtegaalDeJong1981,
+  author = {J.C. Nagtegaal and J.E. De Jong},
+  title = {Some computational aspects of elastic-plastic large strain analysis},
+  journal = {International Journal for Numerical Methods in Engineering},
+  year = {1981},
+  month = {January},
+  volume = {17},
+  issue = {1},
+  pages = {15--41}
+}
+
 @ARTICLE{NakaoKinoshita2008,
   author = {Nakao, M. T. and Kinoshita, T.},
   title = {Some remarks on the behaviour of the finite element solution in nonsmooth
@@ -7979,6 +8001,16 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   author = {Tennekes, H. and Lumley, J. L.},
   pages = {300},
   url = {http://mitpress.mit.edu/catalog/item/default.asp?ttype=2&tid=4658}
+}
+
+@ARTICLE{TerrelScott2008,
+  author = {Andy R. Terrel and L. Ridgway Scott and Matthew G. Knepley and Robert C. Kirby},
+  title = {Automated FEM discretizations for the {S}tokes equation.},
+  journal = {BIT Numerical Mathematics},
+  year = {2008},
+  month = {July},
+  volume = {48},
+  pages = {389--404}
 }
 
 @ARTICLE{TezduyarPark1986,
