--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -38,8 +38,7 @@
               Excellence grant from the Research Council of Norway to
               the Center for Biomedical Computing at Simula Research
               Laboratory.}
-             {Chapters
-              \ref{chap:logg-2}, \ref{chap:mardal-2}, \ref{chap:hake}}
+             {Chapters \ref{chap:logg-2}, \ref{chap:mardal-2} and \ref{chap:hake}}
 
 \fenicsauthor{Johan Hoffman}
              {jhoffman@csc.kth.se}
