Lots of fixes: - Add placeholders for unfinished chapters - Add more affiliations - Make book compile without any serious warnings
Still quite a few "spurious" warnings. Maybe we should track
those down as well.

From now on, no changes should be committed without running the
script ./check.sh.

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -64,9 +64,24 @@
              {}
              {Chapter \ref{chap:hoffman-1}}
 
-\fenicsauthor{Robert C. Kirby}{}{}{}{}
+\fenicsauthor{Robert C. Kirby}
+             {robert.c.kirby@ttu.edu}
+             {Department of Mathematics and Statistics, Texas Tech University, USA}
+             {}
+             {Chapters
+              \ref{chap:kirby-7}, \ref{chap:terrel}, \ref{chap:kirby-8}, \ref{chap:kirby-6}, \ref{chap:kirby-2},
+              \ref{chap:kirby-3}, \ref{chap:kirby-4}, \ref{chap:kirby-1} and \ref{chap:kirby-5}}
 
 \fenicsauthor{Matthew G. Knepley}{}{}{}{}
+
+\fenicsauthor{Matthew Gregg Knepley}
+             {knepley@ci.uchicago.edu}
+             {Computation Institute, University of Chicago, Chicago, USA \\
+              Department of Molecular Biology and Physiology, Rush University Medical Center, Chicago, USA \\
+              Mathematics and Computer Science Division, Argonne National Laboratory, Chicago, USA}
+             {This work was also supported by the Office of Advanced Scientific Computing
+              Research, Office of Science, U.S. Department of Energy, under Contract DE-AC02-06CH11357.}
+             {Chapter \ref{chap:terrel}}
 
 \fenicsauthor{Hans Petter Langtangen}
              {hpl@simula.no}
@@ -130,7 +145,11 @@
               \ref{chap:kvs-2}, \ref{chap:logg-3}, \ref{chap:mardal-2},
               \ref{chap:mardal-4}, \ref{chap:mortensen}, \ref{chap:wilbers}}
 
-\fenicsauthor{Mikael Mortensen}{}{}{}{}
+\fenicsauthor{Mikael Mortensen}
+             {Mikael.Mortensen@ffi.no}
+             {Norwegian Defence Research Establishment (FFI), Norway}
+             {}
+             {Chapter \ref{chap:mortensen}}
 
 \fenicsauthor{Harish Narayanan}
              {harish@simula.no}
@@ -242,7 +261,13 @@
              {}
              {}
 
-\fenicsauthor{Ilmar M. Wilbers}{}{}{}{}
+\fenicsauthor{Ilmar M. Wilbers}
+             {ilmarw@simula.no}
+             {Center for Biomedical Computing at Simula Research Laboratory, Norway}
+             {This work is supported by a Center of Excellence grant
+              from the Research Council of Norway to the Center for
+              Biomedical Computing at Simula Research Laboratory.}
+             {Chapter \ref{chap:wilbers}}
 
 \fenicsauthor{Kristian B. \O{}lgaard}
              {k.b.oelgaard@gmail.com}
