--- a/book.tex
+++ b/book.tex
@@ -38,9 +38,9 @@
 % Chapters
 
 %------------------------------------------------------------------------------
-% Testing, uncomment
+% For testing, uncomment
 
-%\fenicsinput{logg-2}
+%\fenicsinput{kirby-7}
 %\input{backmatter/authors}
 %\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
 
@@ -70,22 +70,27 @@
 \fenicsinput{alnes-3}
 \fenicsinput{alnes-2}
 \fenicsinput{alnes-1}
-%fenicsinput{hoffman-2}
+%\fenicsinput{hoffman-2}
+\input{unfinished/tmp-hoffman-2/chapter.tex}
 \fenicsinput{mardal-2}
 
 \part{Applications}
 
 %\fenicsinput{terrel}
+\input{unfinished/tmp-terrel/chapter.tex}
 \fenicsinput{kvs-1}
 \fenicsinput{mortensen}
-%%%\fenicsinput{hoffman-1}
+%\fenicsinput{hoffman-1}
+\input{unfinished/tmp-hoffman-1/chapter.tex}
 \fenicsinput{selim}
-%%%\fenicsinput{shan}
+%\fenicsinput{shan}
+\input{unfinished/tmp-shan/chapter.tex}
 \fenicsinput{lopes}
 \fenicsinput{kvs-2}
 \fenicsinput{hentschel}
 \fenicsinput{narayanan}
-%%%\fenicsinput{oelgaard-1}
+%\fenicsinput{oelgaard-1}
+\input{unfinished/tmp-oelgaard-1/chapter.tex}
 \fenicsinput{nikbakht}
 \fenicsinput{schroll}
 \fenicsinput{vynnytska}
