Experiment with new working title

--- a/book.tex
+++ b/book.tex
@@ -1,7 +1,10 @@
 \documentclass[a4paper,twoside,justified,notoc]{layout/fenicsbook}
 
 % Book metadata
-\title{Automated\\ \noindent Scientific\\ \noindent Computing}
+%\title{Automated\\ \noindent Scientific\\ \noindent Computing}
+\title{Automated Solution of \\
+       Differential Equations by \\
+       the Finite Element Method}
 \author[The FEniCS Project]{Logg, Mardal, Wells (Eds.)}
 \publisher{Springer-Verlag}
 
