included hoffman-1 and hoffman-2

--- a/book.tex
+++ b/book.tex
@@ -73,8 +73,7 @@
 \fenicsinput{alnes-3}
 \fenicsinput{alnes-2}
 \fenicsinput{alnes-1}
-%\fenicsinput{hoffman-2}
-\input{unfinished/tmp-hoffman-2/chapter.tex}
+\fenicsinput{hoffman-2}
 \fenicsinput{mardal-2}
 
 \part{Applications}
@@ -83,8 +82,7 @@
 \input{unfinished/tmp-terrel/chapter.tex}
 \fenicsinput{kvs-1}
 \fenicsinput{mortensen}
-%\fenicsinput{hoffman-1}
-\input{unfinished/tmp-hoffman-1/chapter.tex}
+\fenicsinput{hoffman-1}
 \fenicsinput{selim}
 %\fenicsinput{shan}
 \input{unfinished/tmp-shan/chapter.tex}
