added Joachim Haga

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -27,6 +27,17 @@
              {}
              {Chapter \ref{chap:hoffman-2}}
 
+\fenicsauthor{Joachim Berdal Haga}
+             {jobh@simula.no}
+             {Center for Biomedical Computing at Simula Research
+              Laboratory, Norway}
+             {This work is also supported by a Center of
+              Excellence grant from the Research Council of Norway to
+              the Center for Biomedical Computing at Simula Research
+              Laboratory.}
+             {Chapter ref{chap:mardal-4}}
+
+
 \fenicsauthor{Johan Hake}
              {hake.dev@gmail.com}
              {Department of Bioengeneering, UCSD, USA\\
