--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -35,7 +35,7 @@
               Excellence grant from the Research Council of Norway to
               the Center for Biomedical Computing at Simula Research
               Laboratory.}
-             {Chapter ref{chap:mardal-4}}
+             {Chapter \ref{chap:mardal-4}}
 
 
 \fenicsauthor{Johan Hake}
