another bug fix

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -31,7 +31,7 @@
              {jobh@simula.no}
              {Center for Biomedical Computing at Simula Research
               Laboratory, Norway}
-             {This work is also supported by a Center of
+             {This work is supported by a Center of
               Excellence grant from the Research Council of Norway to
               the Center for Biomedical Computing at Simula Research
               Laboratory.}
