Rename chapter shan -> wells.

--- a/book.tex
+++ b/book.tex
@@ -84,8 +84,8 @@
 \fenicsinput{mortensen}
 \fenicsinput{hoffman-1}
 \fenicsinput{selim}
-%\fenicsinput{shan}
-\input{unfinished/tmp-shan/chapter.tex}
+%\fenicsinput{wells}
+\input{unfinished/tmp-wells/chapter.tex}
 \fenicsinput{lopes}
 \fenicsinput{kvs-2}
 \fenicsinput{hentschel}
