--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2417,8 +2417,9 @@ pages = {691}
 
 @PHDTHESIS{Dunne2007,
   author = {Thomas Dunne},
-  title = {Adaptive Finite Element Approximation of Fluid-Structure Interaction
-	Based on Eulerian and Arbitrary Lagrangian-Eulerian Variational Formulations},
+  title = {Adaptive Finite Element Approximation of Fluid-Structure
+  Interaction Based on {E}ulerian and Arbitrary {L}agrangian-{E}ulerian
+	Variational Formulations},
   school = {Ruprecht-Karls-Universität, Heidelberg},
   year = {2007}
 }
@@ -2426,13 +2427,12 @@ pages = {691}
 @ARTICLE{DunneRannacher2006,
   author = {Dunne, T. and Rannacher, R.},
   title = {Adaptive Finite Element Approximation of Fluid-Structure Interaction
-	Based on an Eulerian Variational Formulation},
-  journal = {LECTURE NOTES IN COMPUTATIONAL SCIENCE AND ENGINEERING},
+	Based on an {E}ulerian Variational Formulation},
+  journal = {Lecture Notes In Computational Science And Engineering},
   year = {2006},
   volume = {53},
   pages = {110},
   publisher = {Springer},
-  timestamp = {2009.05.14}
 }
 
 @TECHREPORT{DupontHoffmanJohnsonEtAl2003,
@@ -3923,20 +3923,25 @@ year = "2008"
 }
 
 @INPROCEEDINGS{HronTurek2005,
-author       = {Hron, J. and Turek, S.},
-editor       = {Papadrakakis, M. and Onate, E. and Schrefler, B.},
-title        = {A Monolithic {FEM} Solver for {ALE} Formulation of Fluid Structure Interaction with Configurations for Numerical Benchmarking},
-booktitle        = {Computational Methods for Coupled Problems in Science and Engineering},
+author    = {Hron, J. and Turek, S.},
+editor    = {Papadrakakis, M. and Onate, E. and Schrefler, B.},
+title     = {A Monolithic {FEM} Solver for {ALE} Formulation of Fluid
+             Structure Interaction with Configurations for Numerical Benchmarking},
+booktitle = {Computational Methods for Coupled Problems in Science and Engineering},
 year         = {2005},
 volume       = {First Edition},
 pages        = {148},
-note         = {Konferenzband `First International Conference on Computational Methods for Coupled Problems in Science and Engineering` (Santorini, May 25th - 27th)},
+note = {Konferenzband `First International Conference on Computational
+Methods for Coupled Problems in Science and Engineering` (Santorini,
+May 25th - 27th)},
 }
 
-@inbook{DunneRannacher2006,
-author = "Dunne, T. and Rannacher, R.",
-title = "Adaptive finite element simulation of fluid structure interaction based on an Eulerian variational formulation",
-publisher = "Fluid-structure interaction: Modelling, Simulation, Springer (H.-J. Bungartz et al., eds), Springer",
+@inbook{DunneRannacher2006b,
+author = {Dunne, T. and Rannacher, R.},
+title = {Adaptive finite element simulation of fluid structure interaction
+based on an {E}ulerian variational formulation},
+publisher = {Fluid-structure interaction: Modelling, Simulation, Springer
+(H.-J. Bungartz et al., eds), Springer},
 year = "2006"
 }
 
