update my chapter list to the right order

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -149,11 +149,11 @@
               from the Research Council of Norway to the Center for
               Biomedical Computing at Simula Research Laboratory.}
              {Chapters
-              \ref{chap:alnes-1}, \ref{chap:alnes-2}, \ref{chap:alnes-3},
-              \ref{chap:hentschel}, \ref{chap:kirby-1}, \ref{chap:kvs-1},
-              \ref{chap:kvs-2}, \ref{chap:logg-3}, \ref{chap:mardal-2},
-              \ref{chap:mardal-4}, \ref{chap:mortensen}, \ref{chap:wilbers}}
-
+              \ref{chap:kirby-1}, \ref{chap:logg-3}, \ref{chap:wilbers},
+              \ref{chap:alnes-3}, \ref{chap:alnes-2}, \ref{chap:mardal-2},
+              \ref{chap:kvs-1}, \ref{chap:mortensen}, \ref{chap:kvs-2}, 
+              \ref{chap:hentschel}, \ref{chap:mardal-4} 
+              }
 \fenicsauthor{Mikael Mortensen}
              {Mikael.Mortensen@ffi.no}
              {Norwegian Defence Research Establishment (FFI), Norway}
@@ -260,7 +260,7 @@
              {This work is supported by a Center of Excellence grant
               from the Research Council of Norway to the Center for
               Biomedical Computing at Simula Research Laboratory.}
-             {Chapters \ref{chap:kvs-1} and \ref{chap:kvs-1}}
+             {Chapters \ref{chap:kvs-1} and \ref{chap:kvs-2}}
 
 \fenicsauthor{Lyudmyla Vynnytska}{}{}{}{}
 
