Few minor changes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6399,7 +6399,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 }
 
 @ARTICLE{NagtegaalDeJong1981,
-  author = {J.C. Nagtegaal and J.E. De Jong},
+  author = {J.C. Nagtegaal and J.E. {De Jong}},
   title = {Some computational aspects of elastic-plastic large strain analysis},
   journal = {International Journal for Numerical Methods in Engineering},
   year = {1981},
@@ -8005,7 +8005,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
 
 @ARTICLE{TerrelScott2008,
   author = {Andy R. Terrel and L. Ridgway Scott and Matthew G. Knepley and Robert C. Kirby},
-  title = {Automated FEM discretizations for the {S}tokes equation.},
+  title = {Automated {FEM} discretizations for the {S}tokes equation.},
   journal = {BIT Numerical Mathematics},
   year = {2008},
   month = {July},
