Add affiliation for Achim Schroll

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -151,8 +151,8 @@
              {Chapters
               \ref{chap:kirby-1}, \ref{chap:logg-3}, \ref{chap:wilbers},
               \ref{chap:alnes-3}, \ref{chap:alnes-2}, \ref{chap:mardal-2},
-              \ref{chap:kvs-1}, \ref{chap:mortensen}, \ref{chap:kvs-2}, 
-              \ref{chap:hentschel}, \ref{chap:mardal-4} 
+              \ref{chap:kvs-1}, \ref{chap:mortensen}, \ref{chap:kvs-2},
+              \ref{chap:hentschel}, \ref{chap:mardal-4}
               }
 \fenicsauthor{Mikael Mortensen}
              {Mikael.Mortensen@ffi.no}
@@ -216,13 +216,18 @@
              {Chapters
               \ref{chap:logg-1}, \ref{chap:kirby-6}, \ref{chap:rognes}, \ref{chap:vynnytska}}
 
-\fenicsauthor{Hans Joachim Schroll}{}{}{}{}
+\fenicsauthor{Hans Joachim Schroll}
+             {achim@imada.sdu.dk}
+             {Department of Mathematics and Computer Science, University of Southern Denmark, Odense, Denmark}
+             {This work was funded by a research grant from Statoil.
+              The work has been conducted at Simula Research Laboratory, Norway}
+             {Chapter \ref{chap:schroll}}
 
 \fenicsauthor{L. Ridgway Scott}
              {ridg@uchicago.edu}
              {Departments of Computer Science and Mathematics,
               Institute for Biophysical Dynamics and the Computation Institute,
-              University of Chicago}
+              University of Chicago, USA}
              {This work was supported in part by NSF grant DMS-0920960.}
              {Chapter \ref{chap:terrel}}
 
