Small formatting fixes

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -37,7 +37,6 @@
               Laboratory.}
              {Chapter \ref{chap:mardal-4}}
 
-
 \fenicsauthor{Johan Hake}
              {hake.dev@gmail.com}
              {Department of Bioengeneering, UCSD, USA\\
@@ -152,8 +151,8 @@
               \ref{chap:kirby-1}, \ref{chap:logg-3}, \ref{chap:wilbers},
               \ref{chap:alnes-3}, \ref{chap:alnes-2}, \ref{chap:mardal-2},
               \ref{chap:kvs-1}, \ref{chap:mortensen}, \ref{chap:kvs-2},
-              \ref{chap:hentschel}, \ref{chap:mardal-4}
-              }
+              \ref{chap:hentschel}, \ref{chap:mardal-4}}
+
 \fenicsauthor{Mikael Mortensen}
              {Mikael.Mortensen@ffi.no}
              {Norwegian Defence Research Establishment (FFI), Norway}
