Add affiliation for Martin

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -4,7 +4,21 @@
 
 \vspace{1cm}
 
-\fenicsauthor{Martin Sandve Aln\ae{}s}{}{}{}{}
+\fenicsauthor{Martin Sandve Aln\ae{}s}
+             {martinal@simula.no}
+             {Center for Biomedical Computing at Simula Research Laboratory, Norway \\
+              Department of Informatics, University of Oslo, Norway}
+             {This work is supported by an Outstanding Young
+              Investigator grant from the Research Council of Norway,
+              NFR 162730.
+              This work is also supported by a Center of Excellence grant
+              from the Research Council of Norway to the Center for
+              Biomedical Computing at Simula Research Laboratory.}
+             {Chapters
+              \ref{chap:alnes-1},
+              \ref{chap:alnes-2},
+              \ref{chap:alnes-3} and
+              \ref{chap:wilbers}}
 
 \fenicsauthor{Stuart R. Clark}{}{}{}{}
 
@@ -125,7 +139,7 @@
               \ref{chap:alnes-2}, \ref{chap:kirby-3}, \ref{chap:kirby-4},
               \ref{chap:kirby-5}, \ref{chap:kirby-6}, \ref{chap:kirby-7},
               \ref{chap:kirby-8}, \ref{chap:kvs-1}, \ref{chap:kvs-2},
-              \ref{chap:logg-1}, \ref{chap:logg-2}, \ref{chap:logg-3}}
+              \ref{chap:logg-1}, \ref{chap:logg-2} and \ref{chap:logg-3}}
 
 \fenicsauthor{Nuno D. Lopes}
              {ndl@ptmat.fc.ul.pt}
@@ -232,7 +246,8 @@
 
 \fenicsauthor{Kristoffer Selim}
              {selim@simula.no}
-             {Center for Biomedical Computing at Simula Research Laboratory, Norway}
+             {Center for Biomedical Computing at Simula Research Laboratory, Norway \\
+              Department of Informatics, University of Oslo, Norway}
              {This work is supported by an Outstanding Young
               Investigator grant from the Research Council of Norway,
               NFR 180450. This work is also supported by a Center of
