Add revised version of chapter [selim]

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,35 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@ARTICLE{SelimLogg2011a,
+  author = {K. Selim and A. Logg and H. Narayanan and M. G. Larson},
+  title = {An adaptive finite element method for fluid--structure interaction},
+  journal = {submitted to journal},
+  year = {2011},
+}
+
+@ARTICLE{SelimLogg2011b,
+  author = {K. Selim and A. Logg and M. G. Larson},
+  title = {An Adaptive Finite Element Splitting Method for the Incompressible
+        Navier--Stokes Equations},
+  journal = {submitted to journal},
+  year = {2011}
+}
+
+@ARTICLE{FormaggiaNobile1999,
+  author = {Formaggia, L. and Nobile, F.},
+  title = {A stability analysis for the arbitrary {L}agrangian {E}ulerian formulation
+        with finite elements},
+  journal = {EAST WEST JOURNAL OF NUMERICAL MATHEMATICS},
+  year = {1999},
+  volume = {7},
+  pages = {105--132},
+  file = {:FormaggiaNobile1999.pdf:PDF},
+  owner = {selim},
+  publisher = {VSP BV},
+  timestamp = {2010.08.03}
+}
+
 @book{Bickford1994,
   title={A First Course in the Finite Element Method},
   author={Bickford, W. B.},
@@ -2349,8 +2378,8 @@ pages = {691}
 
 @ARTICLE{DoneaGiulianiHalleux1982,
   author = {Donea, J. and Giuliani, S. and Halleux, JP},
-  title = {An arbitrary Lagrangian-Eulerian finite element method for transient
-	dynamic fluid-structure interactions},
+  title = {An arbitrary {L}agrangian--{E}ulerian finite element method for transient
+	dynamic fluid--structure interactions},
   journal = {Computer Methods in Applied Mechanics and Engineering},
   year = {1982},
   volume = {33},
@@ -2378,7 +2407,7 @@ pages = {691}
 @ARTICLE{DoneaHuertaPonthotEtAl2004,
   author = {Donea, J. and Huerta, A. and Ponthot, J. P. and Rodr{\i}guez-Ferran,
 	A.},
-  title = {Arbitrary Lagrangian-Eulerian methods},
+  title = {Arbitrary {L}agrangian--{E}ulerian methods},
   journal = {Encyclopedia of Computational Mechanics},
   year = {2004},
   volume = {1},
@@ -2413,6 +2442,21 @@ pages = {691}
   year = {2005},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@ARTICLE{Dunne2006,
+  author = {Dunne, T.},
+  title = {An {E}ulerian approach to fluid--structure interaction and goal-oriented
+        mesh adaptation},
+  journal = {International Journal for Numerical Methods in Fluids},
+  year = {2006},
+  volume = {51},
+  pages = {1017--1039},
+  number = {9-10},
+  file = {:Dunne2006.pdf:PDF},
+  owner = {selim},
+  publisher = {John Wiley \& Sons},
+  timestamp = {2010.08.05}
 }
 
 @PHDTHESIS{Dunne2007,
@@ -5862,8 +5906,6 @@ author = {Hans Petter Langtangen and Geir Pedersen}
 	year = {2009},
 	pages = {606--637}
 }
-
-
 
 @BOOK{LucaMVenezianiEtAl2009,
   title = {Cardiovascular Mathematics},
