--- a/book.tex
+++ b/book.tex
@@ -43,7 +43,7 @@
 %------------------------------------------------------------------------------
 % For testing, uncomment
 
-%\fenicsinput{kirby-7}
+%\fenicsinput{selim}
 %\input{backmatter/authors}
 %\bibliography{bibliography}\bibliographystyle{abbrvnat}\end{fullwidth}\end{document}
 
