Some formatting fixes.

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -96,7 +96,7 @@
               \ref{chap:kirby-7}, \ref{chap:terrel}, \ref{chap:kirby-8}, \ref{chap:kirby-6}, \ref{chap:kirby-2},
               \ref{chap:kirby-3}, \ref{chap:kirby-4}, \ref{chap:kirby-1} and \ref{chap:kirby-5}}
 
-\fenicsauthor{Matthew Gregg Knepley}
+\fenicsauthor{Matthew G. Knepley}
              {knepley@ci.uchicago.edu}
              {Computation Institute, University of Chicago, Chicago, USA \\
               Department of Molecular Biology and Physiology, Rush University Medical Center, Chicago, USA \\
