Fix first sentence in authors list.

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -1,6 +1,6 @@
 \chapter*{List of Authors}
 
-\emph{The following list of authors have contributed to this book.}
+\emph{The following authors have contributed to this book.}
 
 \vspace{1cm}
 
