--- a/bibliography.bib
+++ b/bibliography.bib
@@ -384,13 +384,14 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
 @ARTICLE{AlastrueyParkerPeiroEtAl2007,
   author = {J. Alastruey and K. H. Parker and J. Peiro and S. M. Byrd and S.
 	J. Sherwin},
-  title = {Modelling the circle of Willis to assess the effects of anatomical
+  title = {Modelling the circle of {W}illis to assess the effects of anatomical
 	variations and occlusions on cerebral flows},
   journal = {Journal of Biomechanics},
   year = {2007},
   volume = {40},
   pages = {1794-1805},
-  number = {8}
+  number = {8},
+  url = {http://dx.doi.org/10.1016/j.jbiomech.2006.07.008}
 }
 
 @BOOK{AlbertsBrayLewisEtAl2002,
@@ -649,7 +650,8 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   journal = {Acta Numerica},
   year = {2006},
   volume = {15},
-  pages = {1--155}
+  pages = {1--155},
+  url = {http://dx.doi.org/10.1017/S0962492906210018}
 }
 
 @INCOLLECTION{ArnoldFalkWinther2006c,
@@ -680,7 +682,9 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   journal = {Numerische Mathematik},
   year = {2000},
   volume = {85},
-  pages = {197--217}
+  number = {2},
+  pages = {197--217},
+  url = {http://dx/doi.org/10.1007/PL00005386}
 }
 
 @ARTICLE{ArnoldFalkWinther1998,
@@ -709,7 +713,9 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   journal = {Mathematics of Computation},
   year = {1997},
   volume = {66},
-  pages = { 957--984}
+  number = {219},
+  pages = { 957--984},
+  url = {http://dx.doi.org/10.1090/S0025-5718-97-00826-0}
 }
 
 @ARTICLE{ArnoldRognes2009,
@@ -730,7 +736,8 @@ url={http://chinacat.coastal.udel.edu/programs/funwave/funwave.html}
   year = {2002},
   volume = {92},
   pages = {401--419},
-  number = {3}
+  number = {3},
+  url = {http://dx.doi.org/10.1007/s002110100348}
 }
 
 @TECHREPORT{AsanovicBodikCatanzaroEtAl2006,
@@ -9091,7 +9098,8 @@ pages = {1--9}
 	journal = {SIAM J. Numer. Anal.},
 	volume = {19},
 	number = {4},
-	year = {1982}
+	year = {1982},
+  url = {http://dx.doi.org/10.1137/0719052}
 }
 
 @Article{KulkarniRovasTortorelli2007,
